<resources>
    <string name="app_name">Screenguard</string>
    <string name="title_apps">Applications</string>
    <string name="title_statistics">Statistics</string>
    <string name="title_blocked_apps">Blocked Applications</string>
    <string name="app_icon">Icon</string>
    <string name="more_options">More Settings</string>
    <string name="app_blocked_message">Application %1$s is blocked.</string>
    <string name="default_blocked_message">Application is blocked</string>
    <string name="device_admin_description">Grant this permission!</string>
    <string name="remove_app">Remove</string>
    <string name="conditional_apps">Conditional Applications</string>
    <string name="conditional_app">Conditional\n</string>
    <string name="search">Search</string>
    <string name="program_name">Application Name</string>
    <string name="this_program_is_blocked">This application is blocked</string>
    <string name="enter_password">Enter Password</string>
    <string name="password">Password</string>
    <string name="deduct_inactive_time">Deduct inactive time</string>
    <string name="submit_password">Confirm</string>
    <string name="change_password">Change Password</string>
    <string name="enter_these_programs_to_decrease_blocked_apps_limit">Enter these applications to reduce the blocked games time!</string>
    <string name="set_time_not_set_yet">Set Time: not set yet</string>
    <string name="sum_of_usage_time">Total Usage Time: 0s 0min</string>
    <string name="set_password">Set Password</string>
    <string name="last_password">Previous Password</string>
    <string name="new_password">New Password</string>
    <string name="submit_new_password">Confirm Password</string>
    <string name="set_new_password_button">Set Password</string>
    <string name="blocked_programs_fragment">Blocked Applications:</string>
    <string name="conditional_apps_fragment">Conditional Applications</string>
    <string name="must_use_time_sum">Daily Usage Time (total):</string>
    <string name="set_usage_time">Set Time</string>
    <string name="set_time_havent_set_yet">Set Time: not set yet</string>
    <string name="total_used_time">Total Usage Time: 0s 0min</string>
    <string name="statistics_fragment">Statistics</string>
    <string name="block_settings">Block Settings (for not to delete app)</string>
    <string name="show_additional_game">Show Additional Games</string>
    <string name="most_used_apps">Most Used</string>
    <string name="name_of_app">Application Name</string>
    <string name="name_of_app_blocked">Application Name</string>
    <string name="name_of_app_conditional">Application Name</string>
    <string name="set_time_show">Set Time: %1$s</string>
    <string name="statistics_is_not_available">Statistics is not available</string>
    <string name="screenguard_is_working">Screenguard is working</string>
    <string name="blocked_apps_are_available_for_today">Blocked applications are unlocked!</string>
    <string name="please_give_permission_accessibility_service">Please enable the Accessibility Service for full functionality.</string>
    <string name="wrong_password">Wrong Password</string>
    <string name="total_usage_time_passfr">Total Usage Time:</string>
    <string name="set_time_havent_set_yet_passfr">Set Time: not set yet</string>
    <string name="set_time_passfr">Set Time:</string>
    <string name="please_fill_up_all_places">Please fill all fields</string>
    <string name="old_password_is_wrong">Previous password is wrong</string>
    <string name="password_is_wrong">Password is wrong</string>
    <string name="successfully_changed_password">Password successfully changed</string>
    <string name="left_time">Remaining Time: %s</string>
    <string name="active_time_in_cond_app">Active Time</string>
    <string name="active_time_in_cond_app_show">Active Time: 10 seconds</string>
    <string name="active_time_in_condi_app">Active Time:</string>
    <string name="what_is_doing_this_button">What does this button do?</string>
    <string name="description_of_active_button">You can select how often the time will be counted when using conditional applications by touching the screen!</string>
    <string name="learn_game_description_text">Want to reduce time faster? Then check this game!</string>
    <string name="ok">OK</string>
    <string name="cancel">Back</string>
    <string name="unlock_premium">Unlock Premium</string>
    <string name="change_class_button">Change Child\'s Class</string>
    <string name="select_class">Select your class!</string>
    <string name="select_class_submit">Confirm</string>
    <string name="close_btt">Close</string>
    <string name="select_subject_text">Select Subject!</string>
    <string name="subject_name_list">Subject Name</string>
    <string name="remaining_time">Remaining Time:</string>
    <string name="remaining_time_default">--:--</string>
    <string name="remaining_time_format">%02d:%02d</string>
    <string name="time_up">UNLOCKED!</string>
    <string name="question_progress">Question %1$d of %2$d</string>
    <string name="answer_correct">Correct Answer!</string>
    <string name="answer_incorrect">Wrong Answer!</string>
    <string name="next_button">Next</string>
    <string name="map_button">Back</string>
    <string name="promocod_desc">This promo code allows you to open all questions! To get a promo code, email visual82222@gmail.com!</string>
    <string name="promokod_enter">Enter Promo Code!</string>
    <string name="promocod_title">Enter a promo code to unlock all questions!</string>
    <string name="premium_success">Premium activated!</string>
    <string name="promokod_failed">Promo code is wrong!</string>
    <string name="get_premium">Get a Premium promo code to unlock all questions!</string>
    <string name="math">Mathematics</string>
    <string name="russian_lg">Russian Language</string>
    <string name="english_lg">English Language</string>
    <string name="literature">Literature</string>
    <string name="history">History</string>
    <string name="geography">Geography</string>
    <string name="biology">Biology</string>
    <string name="algebr">Algebra</string>
    <string name="turkmen_history">Turkmen History</string>
    <string name="geometry">Geometry</string>
    <string name="physics">Physics</string>
    <string name="chemistry">Chemistry</string>
    <string name="informatics">Informatics</string>
    <string name="settings_title">Settings</string>
    <string name="select_class_toast">Select a class!</string>
    <string name="error_statistics_chart">Statistics data not retrieved, please log in again!</string>
    <string name="notify_desc">Notification for ScreenGuard</string>
    <string name="device_admin_granted">Admin permission granted!</string>
    <string name="device_admin_denied">Admin permission denied!</string>
    <string name="use_your_child_entertainment">Take advantage of your child’s entertainment!</string>
    <string name="success">Successfully completed!</string>
    <string name="to_start_app_touch_below_right_done_button">To start, press the button on the right side!</string>
    <string name="notification_required">The app must be granted permission to send notifications!</string>
    <string name="permit_all_permissions">Grant all permissions!</string>
    <string name="title_statistics_perm">Statistics permission</string>
    <string name="statistics_perm_descrp">This permission is required for the app to calculate statistics!</string>
    <string name="statistics_perm_button">Grant statistics permission!</string>
    <string name="accessibility_service_perm_title">Accessibility service</string>
    <string name="accessibility_service_descrp">This permission is required for the app to work fully and correctly!</string>
    <string name="accessibility_service_button">Grant accessibility permission!</string>
    <string name="device_admin_title">Admin permission</string>
    <string name="device_admin_perm_descrp">This permission is required to prevent the app from being removed!</string>
    <string name="device_admin_perm_button">Grant admin permission!</string>
    <string name="notification">Notification permission</string>
    <string name="notification_perm_descrp">The app must be granted permission to send notifications!</string>
    <string name="notification_perm_button">Grant notification permission!</string>
    <string name="overlay_perm_title">Show on top</string>
    <string name="overlay_perm_descrp">This permission is required for blocking!</string>
    <string name="overlay_perm_button">Grant permission!</string>
    <string name="hour">" h"</string>
    <string name="minute">m</string>
</resources>