<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:fitsSystemWindows="true"
    android:paddingStart="20dp"
    android:paddingEnd="20dp"
    android:padding="16dp">

    <TextView
        android:id="@+id/textViewTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/set_password"
        android:textSize="24sp"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="24dp" />

    <!-- Поле для текущего пароля -->
    <EditText
        android:id="@+id/editTextCurrentPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/last_password"
        android:inputType="textPassword"
        android:visibility="gone" />

    <!-- Поле для нового пароля -->
    <EditText
        android:id="@+id/editTextNewPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/new_password"
        android:inputType="textPassword" />

    <!-- Поле для подтверждения пароля -->
    <EditText
        android:id="@+id/editTextConfirmPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/submit_new_password"
        android:inputType="textPassword" />

    <!-- Кнопка установки пароля -->
    <Button
        android:id="@+id/buttonSetPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/set_new_password_button"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="16dp" />

</LinearLayout>
