<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingStart="20dp"
    android:paddingEnd="20dp"
    android:fitsSystemWindows="true"
    android:padding="16dp">

    <TextView
        android:id="@+id/textViewTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_password"
        android:textSize="24sp"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="24dp" />

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/buttonSubmit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit_password"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="16dp" />

    <Button
        android:id="@+id/buttonChangePassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/change_password"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="16dp" />

    <LinearLayout
        android:id="@+id/conditionalContent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/enter_these_programs_to_decrease_blocked_apps_limit"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textSize="24dp" />

        <TextView
            android:id="@+id/setTimeDisplay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/set_time_not_set_yet"
            android:textSize="16sp"
            android:layout_marginTop="10dp"
            android:layout_gravity="center_horizontal" />

        <TextView
            android:id="@+id/totalUsageTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/left_time"
            android:textSize="16sp"
            android:layout_marginTop="10dp"
            android:layout_gravity="center_horizontal" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/conditionalAppsRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginTop="26dp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="6dp"
            android:layout_marginBottom="6dp"
            android:background="@android:color/darker_gray" />
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:id="@+id/constraintLayout"
            android:layout_height="wrap_content"
            android:clickable="true">

            <ImageButton
                android:id="@+id/learn_game_icon"
                android:layout_width="58dp"
                android:layout_height="58dp"
                android:background="@drawable/learn_game_logo"
                android:layout_gravity="center_vertical"
                android:contentDescription="@string/app_icon"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"/>

            <TextView
                android:id="@+id/learn_game_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/learn_game_description_text"
                android:textSize="16sp"
                app:layout_constraintStart_toEndOf="@id/learn_game_icon"
                app:layout_constraintTop_toTopOf="@id/learn_game_icon"
                app:layout_constraintBottom_toBottomOf="@id/learn_game_icon"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>

</LinearLayout>